# sql-lint

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
demo/: index.html  package.json  tsconfig.json  vite.config.js
demo/src/: main.ts  style.css
examples/: create-type.sql  insert-into.sql  select-as.sql  select-bind-parameter.sql  select-case.sql  select-count.sql  select-from-join.sql  select-from-where.sql  select-from.sql  select-group-by.sql  select-having.sql  select-intersect.sql  select-limit.sql  select-null.sql  select-or.sql  select-order.sql  select-string.sql  select-subqueries.sql  select-union.sql  sequence.sql  update.sql
src/: clause.rs  lib.rs  main.rs  statement.rs  tests.rs  ws.rs
src/character/: mod.rs
src/comment/: mod.rs  tests.rs
src/data_type/: mod.rs  tests.rs
src/expression/: condition.rs  mod.rs  tests.rs
src/formatter/: mod.rs  tests.rs
src/function/: mod.rs  tests.rs
src/identifier/: mod.rs  tests.rs
src/index/: index.rs
src/insert/: mod.rs  parser.rs  tests.rs
src/keyword/: mod.rs  tests.rs
src/list/: mod.rs  tests.rs
src/numeric/: mod.rs  tests.rs
src/query/: mod.rs  tests.rs
src/select/: clause.rs  clause_tests.rs  from.rs  from_tests.rs  group.rs  group_tests.rs  join.rs  join_tests.rs  limit.rs  limit_tests.rs  mod.rs  order.rs  order_tests.rs  statement.rs  table_operator.rs  table_operator_test.rs  tests.rs
src/sequence/: mod.rs  tests.rs
src/set/: mod.rs  tests.rs
src/table/: alter.rs  alter_tests.rs  constraint.rs  create.rs  mod.rs  (+4 more)
(+15 files in other folders)
