[package]
name = "sql-lint"
version = "0.1.0"
authors = ["Yann Prono <yann.prono@telecomnancy.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nom = "7.0.0"
pad = "0.1"
strum = "0.24"
strum_macros = "0.24"
colonnade = "1.3.1"
wasm-bindgen = "0.2.79"
regex = "1.5.4"
clap = { version = "3.1.1", features = ["derive"] }